--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node .src/index.js",
+    "start": "node_env=production&& node ./src/index.js",
     "dev": "nodemon .src/index.js"
   },
   "repository": {
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^6.0.6"
   }
 }
